# zarm-cli-rs

./: .gitignore  .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
examples/normal/: package.json  tsconfig.json
examples/normal/src/: index.ts
node/: index.d.ts  index.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: bundle.rs  bundless.rs  lib.rs  main.rs
src/bundless/: bundless.rs  mod.rs  options.rs  transformer.rs  utils.rs
