[package]
edition = "2021"
name = "zarm-cli"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
glob = "0.3.0"
napi = { version = "2.0.2", default-features = false, features = ["napi4"] }
napi-derive = "2.0.1"
tokio = {version = "1.15.0", features = ["default", "fs"]}
regex = "1.5.4"
swc = "0.101.0"
sass-rs = "0.2.2"

[build-dependencies]
napi-build = "1.2.1"
