[package]
edition = "2021"
name = "zarm-cli"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
glob = "0.3.0"
napi = { version = "2.0.2", features = ["napi4", "serde-json"] }
napi-derive = "2.0.1"
tokio = {version = "1.15.0", features = ["default", "fs"]}
regex = "1.5.4"
swc = "0.101.0"
swc_ecma_parser = "0.84.0"
swc_ecma_transforms_module = "0.68.0"
sass-rs = "0.2.2"
serde = "1.0.133"
serde_json = "1.0.74"
serde_derive = "1.0.133"
path-calculate = "0.1.3"
rsass = "0.23.0"
lazy_static = "1.4.0"
wax = "0.3.0"

[build-dependencies]
napi-build = "1.2.1"
